--- a/pages/principal.html
+++ b/pages/principal.html
@@ -114,9 +114,9 @@
             Integración. También a quienes cumplían 
             5, 10 y 15 años en la empresa! Y 
             fnalmente, fnalizamos la jornada con 
-            una festa a puro show y diversión. 
+            una festa a puro show y diversión.<br><br> 
             #HayEquipo</p>
-            <img src="img/7563-ELE-Revista-Mundo-L-N°30-Santiago-5.png" alt="Imagen G10">
+            <img src="https://i.ibb.co/FgsPstx/7563-ELE-Revista-Mundo-L-N-30-Santiago-5.png" alt="Imagen G10">
         </section>
   </body>
    <!-- Incluir el footer -->
